# web-server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Debug.class/: Debug.cpp  Debug.hpp
Google_tests/: CMakeLists.txt  RequestTests.cpp  test1.cpp
IHTTPMessage.interface/: IHTTP.interface.hpp
IHTTPMessage.interface/HTTPStructs/: s_bodies.hpp  s_bodyes.hpp  s_headers.hpp  s_startline.hpp
IHTTPMessage.interface/Request.class/: Request.cpp  Request.hpp
IHTTPMessage.interface/Response.class/: Response.class.hpp  Response.cpp  errorResponse.hpp
Server.class/: Server.cpp  Server.hpp
Server.class/ServerException/: ServerException.hpp
Server.class/UtilsServer/: Debug.hpp  SelectHelper.cpp  SelectHelper.hpp  ServerException.cpp  ServerException.hpp  StructManager.cpp  StructManager.hpp
UnitTests/: CMakeLists.txt  UnitCompare.cpp  UnitTestsHeader.h  main.cpp
UnitTests/RequestTests/: RequestTests.cpp
